# GestaoImobiliaria

./: .gitignore  CMakeLists.txt  main.c  makefile
Armazenamento/Texto/: Admins.txt  Agentes_Imobiliarios.txt  Clientes.txt  Relatorios_Agentes.txt  Visitas.txt
Funcoes/: Funcoes.c  Funcoes.h
Funcoes/Administrador/: adm.c  adm.h
Funcoes/AgentesImobiliarios/: agentes_imobiliarios.c  agentes_imobiliarios.h
Funcoes/Clientes/: clientes.c  clientes.h
Funcoes/Login/: login.c  login.h
Funcoes/Menu/: Menu.c  Menu.h  menu.c  menu.h
Funcoes/Propriedades/: propriedades.c  propriedades.h
Funcoes/Visitas/: visitas.c  visitas.h
InteracaoUtilizador/: interacao_utilizador.c  interacao_utilizador.h
TiposDados/: TiposDados.h
VariaveisGlobais/: variaveis_globais.h
